# omni

./: .env.example  .gitignore  Makefile  README.md  TECH_SPEC.md  TECH_SPEC_DRAFT.md  pyproject.toml
.github/workflows/: pipeline.yml
artifacts/: REPORT.md  enrichment_cache.csv  top_25_report.csv
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: _sources.yml
dbt/models/marts/: _marts__models.yml  backlink_opportunities.sql  enrichment_shortlist.sql  top_backlink_opportunities.sql
dbt/models/staging/: _staging__models.yml  stg_webgraph__ranks.sql  stg_webgraph__target_edges.sql  stg_webgraph__targets.sql  stg_webgraph__vertices.sql
dbt/seeds/: _seeds.yml  enrichment_overrides.csv  excluded_domains.csv  excluded_tlds.csv
dbt/tests/: assert_no_gap_domain_links_to_omni.sql  assert_opportunity_score_in_range.sql  assert_top_list_within_cap.sql
omni/: README.md
omni/topics/: backlink_opportunities.topic
omni/views/: top_backlink_opportunities.view
pipeline/: __init__.py  __main__.py  config.py  db.py  enrich.py  extract.py  report.py  transform.py
tests/: test_enrich.py  test_extract.py  test_manifest.py  test_report.py
